--- a/index.html
+++ b/index.html
@@ -135,6 +135,9 @@
                     <a href="http://usybee.com" target="_blank">USYBEE</a> - Helping job seekers get an edge in job applications.
                   </li>
                   <li>
+                    <a href="http://rutuldave.com/venture-investment-memos/" target="_blank">Venture Investment Memos</a> - A collection of venture capital deal memos that are in the public domain.
+                  </li>
+                  <li>
                     <a href="http://rutuldave.com/startup-bookmarks/" target="_blank">Startup Bookmarks</a> - An active list of resources for building a better startup.
                   </li>
                   <li>
