Add link to Decision Ninja Blog

--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@
               <p>
                 <ul class="unstyled">
                   <li>
+                    <a href="https://rutuldave.com/decision-ninja-blog/" target="_blank">Decision Ninja Blog</a> - Tools, tips, and tricks to improve the quality of all your personal and professional decisions.
+                  </li>
+                  <li>
                     <a href="https://github.com/stockandawe/saas-startup-cto-checklist" target="_blank">SaaS Startup CTO Checklist</a> - Checklist of all things to consider for CTOs of SaaS startups.
                   </li>
                   <li>
