Update page + add list and pages for professional principles

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   			<div class="col-lg-8 col-lg-offset-2 w">
   				<h2>Rutul Dav&egrave</h2>
           <h5>
-            <a href="http://twitter.com/letsfixtheworld" target="_blank">@letsfixtheworld</a>
+            <a href="https://www.linkedin.com/in/rutul-dave/" target="_blank">LinkedIn</a>
             |
             <a href="mailto:rutuldave@gmail.com">rutuldave [at] gmail.com</a>
           </h5>
@@ -71,20 +71,8 @@
             Omneon (acquired by Harmonic), Topspin (acquired by Cisco) and Procket Networks (acquired by Cisco).
           </p>
           <p>
-            I was on CauseArtist’s list of <a href="http://causeartist.com/15-social-entrepreneurs-watch-2014" target="_blank">
-            social entrepreneurs to watch for in 2014</a>. I have been an active voice on immigration reform in United States,
-            and was <a href="http://online.wsj.com/news/articles/SB10001424127887324880504578298150540138218" target="_blank">featured
-            in The Wall Street Journal</a> and on a <a href="https://vimeo.com/64199097" target="_blank">KRON news segment on on startup visas</a>.
-          </p>
-          <p>
-            When inspired to write, I share my <a href="https://medium.com/@letsfixtheworld" target="_blank">thoughts
-            on startups, products, and design</a>. My essay on Agile software
-            development was published in <a href="http://pandawhale.com/post/18062/creative-entrepreneurship-free-pdf-for-entrepreneurs" target="_blank">
-            ‘Creative Entrepreneurship’</a>, a collection of essays helping founders great build companies.
-          </p>
-          <p>
-            As an advisor, engineer, <a href="https://angel.co/rutuldave">investor</a>, and a product consultant,
-            I help <a href="https://letsfixtheworld.github.io" target="_blank">turn ideas into a successful companies</a>.
+            I also serve on the board of <a href="https://www.foodhelpline.org/" target="_blank">Lemontree Foods</a>, 
+            a nonprofit with a mission to alleviate food insecurity.
           </p>
           <p>
             Some of my public software projects and code can be found on <a href="https://github.com/stockandawe" target="_blank">GitHub</a>.
@@ -97,10 +85,32 @@
     <div class="container">
       <div class="row">
           <div class="col-lg-8 col-lg-offset-2" style="margin-bottom: 80px;">
-              <h3>
-                  Projects
-              </h3>
               <p>
+                <h3>
+                  Professional Principles
+                </h3>
+                <h4>
+                  A collection of ideas, quotes, thoughts, and stories that guide my daily actions and decision-making.
+                </h4>
+                <ul class="unstyled">
+                  <li>
+                    <a href="consistency.html">Consistency</a>
+                  </li>
+                  <li>
+                    <a href="simple-not-easy.html">Simple is not easy</a>
+                  </li>
+                  <li>
+                    <a href="monkeys-and-pedestals.html">Monkeys and Pedestals</a>
+                  </li>
+                  <li>
+                    <a href="wealth.html">Wealth</a>
+                  </li>
+                </ul>
+              </p>
+              <p>
+                <h3>
+                    Projects
+                </h3>
                 <ul class="unstyled">
                   <li>
                     <a href="https://rutuldave.com/decision-ninja-blog/" target="_blank">Decision Ninja Blog</a> - Tools, tips, and tricks to improve the quality of all your personal and professional decisions.
@@ -109,18 +119,9 @@
                     <a href="https://github.com/stockandawe/saas-startup-cto-checklist" target="_blank">SaaS Startup CTO Checklist</a> - Checklist of all things to consider for CTOs of SaaS startups.
                   </li>
                   <li>
-                    <a href="http://www.30daysofproduct.com/" target="_blank">30 Days of Product</a> - 30 exercises to build your product knowledge.
-                  </li>
-                  <li>
-                    <a href="http://thepeopleproblem.com/" target="_blank">The People Problem</a> - Stories about how to create projects, build companies, and live a satisfying life.
-                  </li>
-                  <li>
                     <a href="http://rutuldave.com/product-pick-two/" target="_blank">Product Pick Two</a> - Visualizing the challenge of Product Management.
                   <li>
                     <a href="http://rutuldave.com/IdeaList_iOS/" target="_blank">Idea List - iOS App</a> - My first iOS native app created in Swift 2.0.
-                  </li>
-                  <li>
-                    <a href="http://rutuldave.com/venture-investment-memos/" target="_blank">Venture Investment Memos</a> - A collection of venture capital deal memos that are in the public domain.
                   </li>
                   <li>
                     <a href="http://rutuldave.com/startup-bookmarks/" target="_blank">Startup Bookmarks</a> - An active list of resources for building a better startup.
@@ -133,6 +134,28 @@
                   </li>
                   <li>
                     <a href="http://rutuldave.com/IsItAStartup" target="_blank">IsItAStartup?</a> - A simple Q&A bot that helps you evaluate if you should launch a startup based on your idea.
+                  </li>
+                </ul>
+              </p>
+              <p>
+                <h3>
+                  Awards / Notable mentions
+                </h3>
+                <ul class="unstyled">
+                  <li>
+                    <a href="https://thefinancialtechnologyreport.com/the-top-25-financial-technology-ctos-and-cios-of-2023/" target="_blank">
+                      Top 25 Financial Technology CTOs and CIOs of 2023</a> by The Financial Technology Report. 
+                  </li>
+                  <li>
+                    <a href="https://www.verdict.co.uk/cto-talk-qa-with-rutul-dave-of-maxwell/" target="_blank">CTO Talk: Q&A with Rutul Davé of Maxwell</a> with Verdict.
+                  </li>
+                  <li>
+                    CauseArtist’s list of <a href="http://causeartist.com/15-social-entrepreneurs-watch-2014" target="_blank">
+                      Social Entrepreneurs to watch for in 2014</a>. 
+                  </li>
+                  <li>
+                      <a href="http://online.wsj.com/news/articles/SB10001424127887324880504578298150540138218" target="_blank">Featured
+                      in The Wall Street Journal</a> and on a <a href="https://vimeo.com/64199097" target="_blank">KRON news segment on on startup visas</a>.
                   </li>
                 </ul>
               </p>
