Add section on Books

--- a/index.html
+++ b/index.html
@@ -109,6 +109,28 @@
               </p>
               <p>
                 <h3>
+                  Books that have shaped my thinking
+                </h3>
+                <ul class="unstyled">
+                  <li>
+                    <a href="https://www.goodreads.com/en/book/show/35957157" target="_blank">
+                      Thinking in Bets: Making Smarter Decisions When You Don't Have All the Facts
+                    </a>
+                  </li>
+                  <li>
+                    <a href="https://www.goodreads.com/book/show/25899336-when-breath-becomes-air" target="_blank">
+                      When Breath Becomes Air
+                    </a>
+                  </li>
+                  <li>
+                    <a href="https://www.goodreads.com/book/show/18077903-creativity-inc" target="_blank">
+                      Creativity, Inc.: Overcoming the Unseen Forces That Stand in the Way of True Inspiration
+                    </a>
+                  </li>
+                </ul>
+              </p>
+              <p>
+                <h3>
                     Projects
                 </h3>
                 <ul class="unstyled">
