Add a page on Storytelling

--- a/index.html
+++ b/index.html
@@ -97,10 +97,13 @@
                     <a href="consistency.html">Consistency</a>
                   </li>
                   <li>
+                    <a href="monkeys-and-pedestals.html">Monkeys and Pedestals</a>
+                  </li>
+                  <li>
                     <a href="simple-not-easy.html">Simple is not easy</a>
                   </li>
                   <li>
-                    <a href="monkeys-and-pedestals.html">Monkeys and Pedestals</a>
+                    <a href="storytelling.html">Storytelling</a>
                   </li>
                   <li>
                     <a href="wealth.html">Wealth</a>
