--- a/storytelling.html
+++ b/storytelling.html
@@ -33,8 +33,6 @@
   </head>
 
   <body>
-
-
     <div class="container">
   		<div class="row">
   			<div class="col-lg-8 col-lg-offset-2 w">
@@ -45,38 +43,34 @@
 
     	<div class="row">
     		<div class="col-lg-8 col-lg-offset-2">
-          <p>
+          <div class="text-muted">
             07.29.2023
+          </div>
+          <br/>
+          <p class="lead">
+            To be interesting just tell your own story with uncommon honesty.                  
+            <div class="text-muted">- Kevin Kelly</div>
           </p>
           <p>
-            <h4>
-              <blockquote>
-                To be interesting just tell your own story with uncommon honesty.                  
-                <br />
-                <br />            
-                <div class="text-muted">- Kevin Kelly</div>
-              </blockquote>
-            </h4>
+            I love networking events, but I hate going to most of those. Some of the best learnings  and interesting conversations 
+            I have had, have happened at networking events. A networking event is where I met a tech-savvy father who created 
+            incredible bedtime stories for his kids using technology. At another event, I unexpectedly met the entire cast of 
+            the hit HBO show Silicon Valley. However, despite these memorable experiences, I've always dreaded going to networking events, 
+            and just recently I realized why.
           </p>
           <p>
-            I love networking events, but I hate going to most of those. Some of the best learnings  and interesting conversations I have had, have happened at networking events. 
-            It’s where I learned about the guy who uses the power of technology to create amazing bedtime stories for his kids every night. 
-            A networking event is where I unexpectedly met the cast of the hit HBO show Silicon Valley. 
+            I hate introducing myself. I am not an interesting person. 
+            I haven't been in enough unbelievable circumstances that I can describe to a stranger in a hilarious way. 
+            I felt I lacked the captivating life experiences that anyone meeting me for the first time would care.
           </p>
           <p>
-            But even with those amazing and memorable interactions at networking events, I still hate going to those. 
-            I realized it’s because I hate introducing myself. I am not an interesting person. 
-            I haven’t been in enough unbelievable circumstances that I can describe to a stranger in a hilarious way. 
+            That's what I used to think. Then I read <a href="https://matthewdicks.com/storyworthy/" target="_blank">Storyworthy by Matthew Dicks</a> and the key message in the book completely changed my mind.
           </p>
           <p>
-            That’s what I used to think. Then I read <a href="https://matthewdicks.com/storyworthy/" target="_blank">Storyworthy by Matthew Dicks</a> and the key message in the book completely changed my mind.
-          <p>
-          </p>
-            <h4>
-            <blockquote>
-            “Don’t get hung up on the big moments, the unbelievable circumstances, or the hilarious details. Seek out the moments when you felt your heart move”
-          </blockquote>
-            </h4>
+            <mark>
+              “Don't get hung up on the big moments, the unbelievable circumstances, or the hilarious details. 
+              Seek out the moments when you felt your heart move”
+            </mark>
           </p>
           <p>
             I learned a long time ago that to be good at something, putting in the effort and doing the work to get good at it 
@@ -86,32 +80,32 @@
             So in summer of 2023, I started putting in the work to become a better storyteller. 
           </p>
           <p>
-            The book by Matthew Dicks has some practical exercises that I have started doing. One of them is called “Homework for Life”. Homework for Life is a daily exercise where you take a few minutes to reflect on your day and ask yourself one simple question:
+            The book by Matthew Dicks has some practical exercises that I have started doing. One of them is called <strong>Homework for Life</strong>. Homework for Life is a daily exercise where you take a few minutes to reflect on your day and ask yourself one simple question:
           </p>
           <p>
-            <h4>
-            <blockquote>
-            “If I had to tell a story from today - a five minute story onstage about something that took place over the course of this day – what would it be? As benign and boring and inconsequential as it might seem, what was the most story-worthy moment from my day?”
-            </blockquote>
-            </h4>
+            <mark>
+            “If I had to tell a story from today - a five minute story onstage about something that took place over the course of this 
+            day – what would it be? As benign and boring and inconsequential as it might seem, what was the most story-worthy moment from my day?”
+            </mark>
           </p>
           <p>
-            I have been doing my Homework for Life everyday since the past month, and it’s too early to tell if it’s made any difference in my storytelling abilities, or made me want to actually go to networking events. However, it seems to have slowed down time a little where the last month has felt less like a bunch of days blurred together, and instead felt like a collection of memorable events that one day would be storyworthy when I introduce myself or when I tell a story. 
+            For the past month, I've diligently practiced Homework for Life. 
+            Although it's too early to tell if it's made any difference in my storytelling abilities, 
+            or if it has increased my enthusiasm for networking events. it seems to have slowed down time a 
+            little. The last month has felt less like a bunch of days blurred together, and instead it's been a collection of 
+            memorable events that one day would be storyworthy when I introduce myself or when I tell a story. 
           </p>
           <p>
-            To get consistent in this habit of doing my Homework for Life everyday, I made a little app that sends me a daily reminder in email. I reply to the email with my Home for Life note, and that gets captured in my list of notes that anytime I can review and identify which ones could be storyworthy. 
+            To stay consistent with this habit, I created a simple app that sends me a daily email reminder. 
+            I respond to the email with my Homework for Life note, and all these entries are collected in a list for easy review. 
+            This way, I can identify potential stories to share whenever I introduce myself or recount an engaging tale.
           </p>
           <p>
             If you want to practice Homework for Life, check it out here: <a href="https://storyworthy-73b339f7216e.herokuapp.com/" target="_blank">Storyworthy Exercises</a>
           </p>
-            <h4>
-            <blockquote>  
-            Tell me the facts and I’ll learn. Tell me the truth and I’ll believe. But tell me a story and it will live in my heart forever. 
-            <br />
-            <br />            
+          <p class="lead">
+            Tell me the facts and I'll learn. Tell me the truth and I'll believe. But tell me a story and it will live in my heart forever. 
             <div class="text-muted">- Ancient proverb</div>
-            </blockquote>
-            </h4>
           </p>
         </div>
       </div>
