Add Storyworthy to books that have shaped my thinking

--- a/index.html
+++ b/index.html
@@ -116,6 +116,11 @@
                 </h3>
                 <ul class="unstyled">
                   <li>
+                    <a href="https://www.goodreads.com/book/show/37786022-storyworthy" target="_blank">
+                      Storyworthy: Engage, Teach, Persuade, and Change Your Life through the Power of Storytelling
+                    </a>
+                  </li>
+                  <li>
                     <a href="https://www.goodreads.com/en/book/show/35957157" target="_blank">
                       Thinking in Bets: Making Smarter Decisions When You Don't Have All the Facts
                     </a>
