Add storyCoach app to projects

--- a/index.html
+++ b/index.html
@@ -143,6 +143,9 @@
                 </h3>
                 <ul class="unstyled">
                   <li>
+                    <a href="https://storycoach.app" target="_blank">StoryCoach App</a> - Develop your storytelling skills using AI-powered writing tools, buliding daily habits, and doing skill-building exercises.
+                  </li>
+                  <li>
                     <a href="https://rutuldave.com/decision-ninja-blog/" target="_blank">Decision Ninja Blog</a> - Tools, tips, and tricks to improve the quality of all your personal and professional decisions.
                   </li>
                   <li>
