Add a page for Questions

--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
                     <a href="monkeys-and-pedestals.html">Monkeys and Pedestals</a>
                   </li>
                   <li>
+                    <a href="questions.html">Questions</a>
+                  </li>
+                  <li>
                     <a href="simple-not-easy.html">Simple is not easy</a>
                   </li>
                   <li>
