Add 2023 HW Vanguard award

--- a/index.html
+++ b/index.html
@@ -179,6 +179,10 @@
                 </h3>
                 <ul class="unstyled">
                   <li>
+                    <a href="https://www.housingwire.com/winner-profile/2023-hw-vanguard-rutul-dave/" target="_blank">
+                      2023 HW Vanguard Award Winner. 
+                  </li>
+                  <li>
                     <a href="https://thefinancialtechnologyreport.com/the-top-25-financial-technology-ctos-and-cios-of-2023/" target="_blank">
                       Top 25 Financial Technology CTOs and CIOs of 2023</a> by The Financial Technology Report. 
                   </li>
