Fix Google Tag to use GA-4

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
     <![endif]-->
 
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8JMR386WRC"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-47070768-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-8JMR386WRC');
+      gtag('config', 'UA-47070768-1');
     </script>
   </head>
 
