Add some new questions for interviewing

--- a/questions.html
+++ b/questions.html
@@ -91,19 +91,19 @@
           <p>
             <h5>Small Talk/Getting to know someone:</h5>
             <ul>
-              <li>You got a little pep in your step today, what'd you have for breakfast?</li>
-              <li>You look happy! What were you doing right before this?</li>
+              <li>Who are your role models and why?</li>
               <li>What's an ideal Sunday morning for you?</li>
-              <li>What's something you're happy to overspend on?</li>
-              <li>What are you most excited about currently?</li>
               <li>What's lighting you up outside of work?</li>
+              <li>What are you most excited about currently?</li>
+              <li>What's something you're happy to overspend on?</li>
               <li>What's your favorite book you've read recently?</li>
+              <li>You look happy! What were you doing right before this?</li>
+              <li>What's the nicest thing someone's ever said about you?</li>
+              <li>What's the meanest thing someone's ever said about you?</li>
               <li>Tell me about your friends and why are they your friends.</li>
               <li>If you could have any job in the world, what would it be and why?</li>
               <li>If you could move anywhere in the world, where would it be and why?</li>
-              <li>Who are your role models and why?</li>
-              <li>What's the nicest thing someone's ever said about you?</li>
-              <li>What's the meanest thing someone's ever said about you?</li>
+              <li>You got a little pep in your step today, what'd you have for breakfast?</li>
             </ul>
           </p>
 
@@ -111,28 +111,31 @@
             <h5>Questions to ask yourself regularly:</h5>
             <ul>
               <li>Who needs my help?
-              <li>If I could only work two hours today but still wanted today to be a huge success, what would I do in those two hours?</li>
               <li>What are my anti-goals?</li>
               <li>Am I playing a stupid game?</li>
               <li>Is this the beginning, or is this the end?</li>
+              <li>If I could only work two hours today but still wanted today to be a huge success, what would I do in those two hours?</li>
             </ul>
           </p>
 
           <p>
             <h5>When interviewing:</h5>
             <ul>
-              <li>What's something you have changed your mind on over the last decade/recently?
-              <li>What one habit has made a crucial difference in your success?</li>
-              <li>What's the best advice you've ever received?</li>
               <li>What is your superpower? </li>
+              <li>What's the best advice you've ever received?</li>
+              <li>What question am I not asking you that you want me to?</li>
+              <li>What could you give a 5-minute presentation on with no prep? </li>
+              <li>What do you think we are doing wrong as a company right now?</li>
+              <li>What one habit has made a crucial difference in your success?</li>
+              <li>What's something you have changed your mind on over the last decade/recently?
             </ul>
           </p>
 
           <p>
             <h5>When someone offers an opinion or belief or does what they do, the best questions to ask people (in a non-judgemental way):</h5>
             <ul>
-              <li>Why do you think that?</li>
               <li>Why do you do that?</li>
+              <li>Why do you think that?</li>
             </ul>
           </p>
 
