Update Questions page

--- a/questions.html
+++ b/questions.html
@@ -108,7 +108,7 @@
           </p>
 
           <p>
-            <h5>Questions to ask yourself regularly:</h5>
+            <h5>Questions I ask myself often:</h5>
             <ul>
               <li>Who needs my help?
               <li>What are my anti-goals?</li>
@@ -119,14 +119,15 @@
           </p>
 
           <p>
-            <h5>When interviewing:</h5>
+            <h5>When I interview someone:</h5>
             <ul>
-              <li>What is your superpower? </li>
+              <li>What is your superpower?</li>
+              <li>What did you fail at in the last 12 months?</li>
               <li>What's the best advice you've ever received?</li>
               <li>What question am I not asking you that you want me to?</li>
               <li>What could you give a 5-minute presentation on with no prep? </li>
-              <li>What do you think we are doing wrong as a company right now?</li>
               <li>What one habit has made a crucial difference in your success?</li>
+              <li>What do you think we are doing wrong as a company right now?</li>
               <li>What's something you have changed your mind on over the last decade/recently?
             </ul>
           </p>
