Copy update on Questions page

--- a/questions.html
+++ b/questions.html
@@ -55,8 +55,8 @@
             </blockquote>
           </p>
           <p>
-            Inspired by Shaan Puri's idea of being a "question collector" and keeping a running list of questions you can ask in various scenarios, 
-            I started doing the same in 2023. 
+            Inspired by Shaan Puri's idea of being a "question collector", I started doing the same 
+            and now keep a running list of questions that I find valuable. 
           </p>
         </div>
       </div>
