Add a few more questions for interview

--- a/questions.html
+++ b/questions.html
@@ -122,13 +122,16 @@
             <h5>When I interview someone:</h5>
             <ul>
               <li>What is your superpower?</li>
+              <li>What's the hardest thing you've ever done?</li>
               <li>What did you fail at in the last 12 months?</li>
               <li>What's the best advice you've ever received?</li>
               <li>What question am I not asking you that you want me to?</li>
               <li>What could you give a 5-minute presentation on with no prep? </li>
               <li>What one habit has made a crucial difference in your success?</li>
               <li>What do you think we are doing wrong as a company right now?</li>
-              <li>What's something you have changed your mind on over the last decade/recently?
+              <li>What's something that everyone takes for granted that you think is hogwash?</li>
+              <li>What's something you have changed your mind on over the last decade/recently?</li>
+              <li>Tell me about a time when you needed to disagree with your manager or fight for a position against higher leadership.</li>
             </ul>
           </p>
 
