Update quotes on consistency

--- a/consistency.html
+++ b/consistency.html
@@ -33,8 +33,6 @@
   </head>
 
   <body>
-
-
     <div class="container">
   		<div class="row">
   			<div class="col-lg-8 col-lg-offset-2 w">
@@ -51,64 +49,33 @@
                 "We tend to overestimate what we can do in a day and underestimate what we can achieve in a decade."
               </blockquote>
               <blockquote>
-                The consistency of your endeavors (exercise, companionship, work) is more important than the quantity. 
-                Nothing beats small things done every day which is way more important than what you do occasionally. 
+                "In the short term, you are as good as your intensity. In the long term, you are only as good as your consistency."
+                <br/>
+                <br/>
+                <div class="text-muted">- Shane Parrish</div>
+              </blockquote>
+
+              <blockquote>
+                The consistency of your endeavors (exercise, companionship, work) is more important than the quantity.
+                Nothing beats small things done every day which is way more important than what you do occasionally.
               </blockquote>
               <blockquote>
-                “All the greatest prizes in life, in wealth, relationships, or knowledge, come from the magic of compounding interest by amplifying 
+                “All the greatest prizes in life, in wealth, relationships, or knowledge, come from the magic of compounding interest by amplifying
                 small steady gains. All you need for abundance is to keep adding 1% more than you subtract on a regular basis.”
+              </blockquote>
+
+              <blockquote>
+                “27th. A man who defers working because he wants tranquillity of mind will have lost the habit when tranquillity comes.
+                Work under any circumstances—all circumstances.
+                I used to carry my sketch when arrested and sketch and compose as I sat by the officer's side.
+                The consequence was I was always ready, never depressed, and returned to my work with a new thought or an
+                additional improvement as if I had been all the time at home."
+                <br/>
+                <br/>
+                <div class="text-muted">- Benjamin Robert Haydon, April 1844</div>
               </blockquote>
             </h4>
           </p>
-    			<p>
-            Once upon a time, in a small village nestled at the foot of a magnificent mountain range, there lived a young girl named Lily. 
-            Lily was known for her boundless energy, enthusiasm, and a strong desire to accomplish great things. 
-            She was always making grand plans for each day, convinced that she could conquer the world in just twenty-four hours.
-          </p>
-          <p>
-            Every morning, Lily would wake up with a new goal for the day. On some days, she would start her day by imagining herself as a great painter, 
-            envisioning a masterpiece on her canvas. On another day, she would set out to learn a new musical instrument, believing that she would become a 
-            virtuoso in a matter of hours. Some days, she would try to solve complex mathematical problems, read an entire library's worth of books, and even 
-            learn a new language.
-          </p>
-          <p>
-            Each day though, as the day progressed, Lily would become increasingly frustrated and disappointed. She would realize that she hadn't 
-            accomplished even a fraction of what she had set out to do. The painting would be a mere sketch, 
-            the musical instrument would remain untouched, and the mathematical problems would seem unsolvable. 
-            Overwhelmed, she would retire to her bed at night, feeling defeated and disheartened.
-          </p>
-          <p>
-            One evening, while pondering over her constant inability to achieve her daily goals, Lily's wise grandmother approached her. 
-            She had witnessed Lily's struggles and recognized the pattern of overestimating what could be done in a single day. 
-            With a gentle smile, she shared a story with Lily. 
-            "Long ago, when I was a young girl just like you," her grandmother began, "I too believed that I could change the world overnight. 
-            But as the years passed, I discovered that true greatness comes not from what we achieve in a day, but what we dedicate ourselves to over time." 
-            Curious as ever, Lily urged her grandmother to continue.
-          </p>
-          <p>
-            "There was once a young architect named Samuel," her grandmother continued. "He dreamt of building a grand cathedral that would stand as a 
-            testament to his skill and dedication. Samuel knew that such a task couldn't be completed in a day, a month, or even a year. 
-            But he was determined to see his vision come to life."
-            
-            For the next ten years, Samuel tirelessly worked on his masterpiece. He meticulously planned the intricate details, carefully selected materials, 
-            and assembled a team of skilled craftsmen. Day after day, they worked diligently, putting their hearts and souls into every brick and every stroke of paint.
-          </p>
-          <p>
-            When the day finally arrived, Samuel's cathedral stood tall, an awe-inspiring marvel that left all who beheld it speechless. 
-            The villagers marveled at the grandeur and wondered how a mere mortal could accomplish such a feat. Samuel had realized that while he may 
-            have underestimated the time it would take, he had also greatly underestimated his own ability to achieve greatness over a decade.
-          </p>
-          <p>
-            Lily listened intently, absorbing the wisdom her grandmother's story conveyed. She realized that her grandmother was trying to tell her 
-            that it's natural to overestimate what can be accomplished in a day, but true success often requires patience, persistence, 
-            and a long-term perspective.
-          </p>
-          <p>
-            From that day forward, Lily learned to set more realistic expectations for herself. She embraced the idea that progress is a gradual process, 
-            and she started focusing on long-term goals instead of overwhelming herself with short-term aspirations. 
-            Over the years, she cultivated her talents, honed her skills, and accomplished remarkable things, each step bringing her closer to her own version of greatness.
-          </p>
-          </div>
       </div>
     </div>
   </body>
