Add a new question

--- a/questions.html
+++ b/questions.html
@@ -55,8 +55,8 @@
             </blockquote>
           </p>
           <p>
-            Inspired by Shaan Puri's idea of being a "question collector", I started doing the same 
-            and now keep a running list of questions that I find valuable. 
+            Inspired by Shaan Puri's idea of being a "question collector", I started doing the same
+            and now keep a running list of questions that I find valuable.
           </p>
         </div>
       </div>
@@ -101,6 +101,7 @@
               <li>What's the nicest thing someone's ever said about you?</li>
               <li>What's the meanest thing someone's ever said about you?</li>
               <li>Tell me about your friends and why are they your friends.</li>
+              <li>What is something about you that people tend to get wrong?</li>
               <li>If you could have any job in the world, what would it be and why?</li>
               <li>If you could move anywhere in the world, where would it be and why?</li>
               <li>You got a little pep in your step today, what'd you have for breakfast?</li>
