Add some new questions

--- a/questions.html
+++ b/questions.html
@@ -91,17 +91,22 @@
           <p>
             <h5>Small Talk/Getting to know someone:</h5>
             <ul>
+              <li>What's on your unofficial resume?</li>
               <li>Who are your role models and why?</li>
               <li>What's an ideal Sunday morning for you?</li>
               <li>What's lighting you up outside of work?</li>
               <li>What are you most excited about currently?</li>
+              <li>If you had another career, what would it be?</li>
               <li>What's something you're happy to overspend on?</li>
               <li>What's your favorite book you've read recently?</li>
+              <li>What is a risk you took that changed your life?</li>
               <li>You look happy! What were you doing right before this?</li>
               <li>What's the nicest thing someone's ever said about you?</li>
               <li>What's the meanest thing someone's ever said about you?</li>
               <li>Tell me about your friends and why are they your friends.</li>
+              <li>What's an encounter with a stranger you will never forget?</li>
               <li>What is something about you that people tend to get wrong?</li>
+              <li>What is something you'd whisper in the ear of your younger self?</li>
               <li>If you could have any job in the world, what would it be and why?</li>
               <li>If you could move anywhere in the world, where would it be and why?</li>
               <li>You got a little pep in your step today, what'd you have for breakfast?</li>
