Update the subheading with a better quote

--- a/questions.html
+++ b/questions.html
@@ -38,7 +38,7 @@
   			<div class="col-lg-8 col-lg-offset-2 w">
   				<h2>Questions</h2>
           <h5>
-            "To be interesting, be interested"
+            “The best discoveries in life come not from finding the right answers, but from asking the right questions.”
           </h5>
           <hr class="soften">
   			</div>
