Add a new question

--- a/questions.html
+++ b/questions.html
@@ -106,6 +106,7 @@
               <li>Tell me about your friends and why are they your friends.</li>
               <li>What's an encounter with a stranger you will never forget?</li>
               <li>What is something about you that people tend to get wrong?</li>
+              <li>When was the last time you did something for the first time?</li>
               <li>What is something you'd whisper in the ear of your younger self?</li>
               <li>If you could have any job in the world, what would it be and why?</li>
               <li>If you could move anywhere in the world, where would it be and why?</li>
