Add a page on the principles of happiness

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             Omneon (acquired by Harmonic), Topspin (acquired by Cisco) and Procket Networks (acquired by Cisco).
           </p>
           <p>
-            I also serve on the board of <a href="https://www.foodhelpline.org/" target="_blank">Lemontree Foods</a>, 
+            I also serve on the board of <a href="https://www.foodhelpline.org/" target="_blank">Lemontree Foods</a>,
             a nonprofit with a mission to alleviate food insecurity.
           </p>
           <p>
@@ -93,6 +93,9 @@
                   A collection of ideas, quotes, thoughts, and stories that guide my daily actions and decision-making.
                 </h4>
                 <ul class="unstyled">
+                  <li>
+                    <a href="happiness.html">Happiness</a>
+                  </li>
                   <li>
                     <a href="consistency.html">Consistency</a>
                   </li>
@@ -180,18 +183,18 @@
                 <ul class="unstyled">
                   <li>
                     <a href="https://www.housingwire.com/winner-profile/2023-hw-vanguard-rutul-dave/" target="_blank">
-                      2023 HW Vanguard Award Winner. 
+                      2023 HW Vanguard Award Winner.
                   </li>
                   <li>
                     <a href="https://thefinancialtechnologyreport.com/the-top-25-financial-technology-ctos-and-cios-of-2023/" target="_blank">
-                      Top 25 Financial Technology CTOs and CIOs of 2023</a> by The Financial Technology Report. 
+                      Top 25 Financial Technology CTOs and CIOs of 2023</a> by The Financial Technology Report.
                   </li>
                   <li>
                     <a href="https://www.verdict.co.uk/cto-talk-qa-with-rutul-dave-of-maxwell/" target="_blank">CTO Talk: Q&A with Rutul Davé of Maxwell</a> with Verdict.
                   </li>
                   <li>
                     CauseArtist’s list of <a href="http://causeartist.com/15-social-entrepreneurs-watch-2014" target="_blank">
-                      Social Entrepreneurs to watch for in 2014</a>. 
+                      Social Entrepreneurs to watch for in 2014</a>.
                   </li>
                   <li>
                       <a href="http://online.wsj.com/news/articles/SB10001424127887324880504578298150540138218" target="_blank">Featured
