Add 2024 Inman Best of Finance winner

--- a/index.html
+++ b/index.html
@@ -182,6 +182,10 @@
                 </h3>
                 <ul class="unstyled">
                   <li>
+                    <a href="https://www.inman.com/best-of-finance-awards/" target="_blank">
+                      2024 Inman Best of Finance Award Winner.
+                  </li>
+                  <li>
                     <a href="https://www.housingwire.com/winner-profile/2023-hw-vanguard-rutul-dave/" target="_blank">
                       2023 HW Vanguard Award Winner.
                   </li>
