Add 2022 HW Tech Trendsetter link

--- a/index.html
+++ b/index.html
@@ -194,6 +194,10 @@
                       Top 25 Financial Technology CTOs and CIOs of 2023</a> by The Financial Technology Report.
                   </li>
                   <li>
+                    <a href="https://www.housingwire.com/winner-profile/2022-hw-tech-trendsetter-rutul-dave/" target="_blank">
+                      2022 HW Tech Trendsetter: Rutul Davé
+                  </li>
+                  <li>
                     <a href="https://www.verdict.co.uk/cto-talk-qa-with-rutul-dave-of-maxwell/" target="_blank">CTO Talk: Q&A with Rutul Davé of Maxwell</a> with Verdict.
                   </li>
                   <li>
