--- a/questions.html
+++ b/questions.html
@@ -111,6 +111,7 @@
               <li>If you could have any job in the world, what would it be and why?</li>
               <li>If you could move anywhere in the world, where would it be and why?</li>
               <li>You got a little pep in your step today, what'd you have for breakfast?</li>
+              <li>If you didn’t know the day you were born, how old would you think you are?</li>
               <li>What's something about you that you think is a good quality, but others would disagree?</li>
               <li>What's something random or improbable that happened in the past that had a major impact on your life?</li>
             </ul>
