Fix some ordering

--- a/questions.html
+++ b/questions.html
@@ -93,8 +93,8 @@
             <ul>
               <li>What's on your unofficial resume?</li>
               <li>Who are your role models and why?</li>
-              <li>What's an ideal Sunday morning for you?</li>
               <li>What's lighting you up outside of work?</li>
+              <li>What's an ideal Sunday morning for you?</li>
               <li>What are you most excited about currently?</li>
               <li>If you had another career, what would it be?</li>
               <li>What's something you're happy to overspend on?</li>
@@ -111,7 +111,7 @@
               <li>If you could have any job in the world, what would it be and why?</li>
               <li>If you could move anywhere in the world, where would it be and why?</li>
               <li>You got a little pep in your step today, what'd you have for breakfast?</li>
-              <li>If you didn’t know the day you were born, how old would you think you are?</li>
+              <li>If you didn't know the day you were born, how old would you think you are?</li>
               <li>What's something about you that you think is a good quality, but others would disagree?</li>
               <li>What's something random or improbable that happened in the past that had a major impact on your life?</li>
             </ul>
