Add questions for doing a "self-review"
Fix html errors

--- a/questions.html
+++ b/questions.html
@@ -117,10 +117,10 @@
             </ul>
           </p>
 
+          <h5>Questions I ask myself often:</h5>
           <p>
-            <h5>Questions I ask myself often:</h5>
             <ul>
-              <li>Who needs my help?
+              <li>Who needs my help?</li>
               <li>What are my anti-goals?</li>
               <li>Am I playing a stupid game?</li>
               <li>Is this the beginning, or is this the end?</li>
@@ -128,8 +128,18 @@
             </ul>
           </p>
 
+          <h5>Questions for doing a "self-review":</h5>
           <p>
-            <h5>When I interview someone:</h5>
+            <ul>
+              <li>What are the recent wins?</li>
+              <li>What are the things I am bad at that I AM accepting and not working on?</li>
+              <li>What are the things I am bad at that I am NOT accepting and working on?</li>
+              <li>What are the things in my life I am no longer willing to tolerate​ and plan to start working on?</li>
+            </ul>
+          </p>
+
+          <h5>When I interview someone:</h5>
+          <p>
             <ul>
               <li>What is your superpower?</li>
               <li>What's the hardest thing you've ever done?</li>
@@ -145,8 +155,8 @@
             </ul>
           </p>
 
+          <h5>When someone offers an opinion or belief or does what they do, the best questions to ask people (in a non-judgemental way):</h5>
           <p>
-            <h5>When someone offers an opinion or belief or does what they do, the best questions to ask people (in a non-judgemental way):</h5>
             <ul>
               <li>Why do you do that?</li>
               <li>Why do you think that?</li>
